--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dfinity_project",
+  "name": "supply_order",
+  "description": "Orders, item catalog, supplying management",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,7 @@
   "engines": {
     "node": "^12 || ^14 || ^16 || ^18"
   },
-  "keywords": [],
+  "keywords": ["ICP", "Supply chain", "smart contract", "canister", "dfx", "typescript"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
